rgbds-0.6.1/test/asm/local-purge.err
error: local-purge.asm(8):
    Interpolated symbol ".loc" does not exist
error: Assembly aborted (1 error)!
